GitLab CI/temp/Kubernetes – Service.yml
apiVersion: v1
kind: Service
metadata:
name: app-service
spec:
type: NodePort
selector:
app: myapp
ports:
- port: 80
targetPort: 8080
